--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,21 @@ header h1{ font-size:16px; margin:0; cursor:pointer; user-select:none; }
 
 #bar{
   position:sticky; bottom:0;
-  display:flex; gap:8px; padding:8px 8px calc(8px + var(--safe-bottom));
+  display:grid; grid-template-columns: minmax(150px, 240px) 1fr auto auto;
+  gap:8px; padding:8px 8px calc(8px + var(--safe-bottom));
   border-top:1px solid #e5e5e5; background:#fff; z-index:10;
   box-shadow:0 -2px 8px rgba(0,0,0,.04);
   align-items: center;
 }
-input,button,select{ font-size:16px }
-#nameSel{ width:30%; min-width:160px }
-#text{ flex:1; min-width:0 }
+select, button, textarea{ font-size:16px }
+#nameSel{ width:100%; min-width:140px }
+#text{
+  width:100%; min-height:2.8em; max-height:9em; resize: none;
+  line-height:1.4; padding:8px 10px;
+  border:1px solid #ddd; border-radius:8px;
+}
 #send{ padding:8px 12px }
-#photo{ display:none } /* 隠しファイル入力 */
+#photo{ display:none }
 #photoBtn{ padding:8px 10px; border:1px solid #ddd; border-radius:6px; background:#fff; }
 
 .bubble{
@@ -57,10 +62,10 @@ input,button,select{ font-size:16px }
 
 mark { background: #ffe56a; padding: 0 2px; border-radius: 2px; }
 
-/* メンション候補ポップアップ */
+/* メンション候補 */
 .mention-box{
   position:absolute; left: 8px; right: 8px;
-  bottom: calc(52px + var(--safe-bottom));
+  bottom: calc(64px + var(--safe-bottom)); /* 入力域が高くなったので少し上に */
   display:none; background:#fff; border:1px solid #e5e5e5; border-radius:8px;
   box-shadow:0 8px 24px rgba(0,0,0,.08); padding:6px; z-index: 20;
 }
@@ -78,7 +83,7 @@ img.chat-photo{
 }
 
 @media (max-width:480px){
-  #nameSel{ width:45% } #send{ padding:8px }
+  #bar{ grid-template-columns: minmax(120px, 40%) 1fr auto auto; }
 }
 </style>
 
@@ -102,7 +107,9 @@ img.chat-photo{
     <option value="りと">りと</option>
   </select>
 
-  <input id="text" placeholder="メッセージを入力" autocomplete="off" inputmode="text">
+  <!-- 2行以上の入力欄（Enter送信 / Shift+Enter改行） -->
+  <textarea id="text" placeholder="メッセージを入力（Enterで送信・Shift+Enterで改行）" rows="2"></textarea>
+
   <button id="photoBtn" title="写真を送る">📷</button>
   <input id="photo" type="file" accept="image/*">
 
@@ -119,7 +126,7 @@ const MEMBERS = ['なおき', 'りさ', 'さな', 'りと'];
 const socket  = io();
 const log     = document.getElementById('log');
 const nameSel = document.getElementById('nameSel');
-const textI   = document.getElementById('text');
+const textI   = document.getElementById('text');   // textarea
 const photoI  = document.getElementById('photo');
 const photoB  = document.getElementById('photoBtn');
 const sendB   = document.getElementById('send');
@@ -129,7 +136,7 @@ const titleEl = document.getElementById('title');
 const mentionBox  = document.getElementById('mentionBox');
 const mentionList = document.getElementById('mentionList');
 
-/* ===== スマホ最適化：キーボード表示時の持ち上げ（iOS VisualViewport対応） ===== */
+/* ===== スマホ最適化：キーボード対応 ===== */
 if (window.visualViewport) {
   const onVV = () => {
     const vh = window.visualViewport.height;
@@ -138,7 +145,6 @@ if (window.visualViewport) {
   window.visualViewport.addEventListener('resize', onVV);
   onVV();
 }
-textI.addEventListener('focus', () => setTimeout(() => textI.scrollIntoView({block:'nearest'}), 30));
 
 /* ===== 便利関数 ===== */
 function isNearBottom(elem, th = 40) { return elem.scrollTop + elem.clientHeight >= elem.scrollHeight - th; }
@@ -160,6 +166,18 @@ nameSel.addEventListener('change', () => {
   localStorage.setItem('nickname', nameSel.value);
   if (nameSel.value) socket.emit('join', nameSel.value);
 });
+
+/* ===== 入力欄オートリサイズ（2行～最大9行） ===== */
+function autoResize() {
+  textI.style.height = 'auto';
+  const h = Math.min(textI.scrollHeight, 9 * 20 + 16); // ざっくり行高×9 + padding
+  textI.style.height = h + 'px';
+}
+textI.addEventListener('input', autoResize);
+textI.addEventListener('focus', () => setTimeout(() => {
+  autoResize(); textI.scrollIntoView({block:'nearest'});
+}, 30));
+autoResize();
 
 /* ===== 相対時刻 ===== */
 function relativeTime(dateStr){
@@ -191,8 +209,8 @@ function ensureSeparatorForAppend(dateStr){
   lastDateKey = dateKey;
 }
 
-/* ===== 通知（iPhone 16 対応：未対応なら明示） ===== */
-let notifEnabled = JSON.parse(localStorage.getItem('notifEnabled') ?? 'true'); // 既定ON
+/* ===== 通知（未対応ブラウザは無効化） ===== */
+let notifEnabled = JSON.parse(localStorage.getItem('notifEnabled') ?? 'true');
 function supportsNotification(){
   return (typeof Notification !== 'undefined') && typeof Notification.requestPermission === 'function';
 }
@@ -208,10 +226,7 @@ function updateNotifButton(){
   notifB.textContent = label;
 }
 notifB.onclick = async () => {
-  if (!supportsNotification()) {
-    alert('このブラウザでは通知が使えません。iPhoneの場合はホーム画面に追加（PWA化）すると通知許可できる場合があります。');
-    return;
-  }
+  if (!supportsNotification()) { alert('このブラウザでは通知が使えません'); return; }
   const perm = Notification.permission;
   if (perm !== 'granted') {
     const p = await Notification.requestPermission();
@@ -231,16 +246,21 @@ function maybeNotify({name, text}){
   const my = nameSel.value;
   const mentioned = text && text.includes(`@${my}`);
   const notInFront = document.hidden || !document.hasFocus();
-  if (!mentioned && !notInFront) return; // 自分宛以外は非表示時のみ
+  if (!mentioned && !notInFront) return;
   const title = mentioned ? `📣 あなた宛て (${name})` : `${name}`;
   new Notification(title, { body: text || '写真が送信されました', tag: 'hobby-chat' });
   if (navigator.vibrate) navigator.vibrate(mentioned ? 100 : 30);
 }
 
-/* ===== 既読管理（全員の last_message_id を集計） ===== */
+/* ===== 既読（自分のメッセージにだけバッジ表示） ===== */
 const lastReads = new Map(); // name -> last_message_id
 function updateReadBadgeFor(messageId, bubbleEl, sender){
-  // 送信者を除いた「読んだ人数」
+  // 自分が送ったメッセージ以外は既読バッジを表示しない
+  if (sender !== nameSel.value) {
+    const exist = bubbleEl.querySelector('.read-badge');
+    if (exist) exist.remove();
+    return;
+  }
   let count = 0;
   for (const m of MEMBERS) {
     if (m === sender) continue;
@@ -256,11 +276,11 @@ function updateReadBadgeFor(messageId, bubbleEl, sender){
   badge.textContent = count >= (MEMBERS.length - 1) ? '既読 全員' : `既読 ${count}`;
 }
 
-/* ===== 重複防止／ID管理 ===== */
+/* ===== 重複防止 ===== */
 const seen = new Set();
 const keyOf = (m) => m.id ? `id:${m.id}` : `${m.name}:${m.text}:${m.created_at || ''}`;
 
-/* ===== テキスト整形（メンション強調 & 画像表示） ===== */
+/* ===== メンション強調 ===== */
 function renderTextWithMentions(raw){
   let esc = escapeHTML(raw);
   esc = esc.replace(/@(?:なおき|りさ|さな|りと)/g, (mt) => `<mark>${mt}</mark>`);
@@ -284,7 +304,6 @@ function addMsg(m, me=false){
   body.className = 'msg-text';
 
   if (m.image_base64) {
-    // 画像メッセージ
     const img = document.createElement('img');
     img.className = 'chat-photo';
     img.alt = 'photo';
@@ -303,7 +322,7 @@ function addMsg(m, me=false){
   wrap.append(body, time);
   log.append(wrap);
 
-  // 既読バッジ初期表示
+  // 自分のメッセージにだけ既読バッジ（初期描画）
   updateReadBadgeFor(m.id, wrap, m.name);
 }
 
@@ -321,10 +340,16 @@ socket.on('sys', addSys);
 
 socket.on('reads_bulk', (rows) => {
   rows.forEach(r => lastReads.set(r.name, r.last_message_id || 0));
+  // 初期描画後に全吹き出しを更新
+  document.querySelectorAll('.bubble').forEach(el => {
+    const id = Number(el.dataset.id);
+    const sender = el.dataset.sender;
+    if (id) updateReadBadgeFor(id, el, sender);
+  });
 });
 socket.on('reads', ({name, last_message_id}) => {
   lastReads.set(name, last_message_id || 0);
-  // 最新の数件だけ更新で十分だが、簡易に全更新
+  // 全体更新（簡易）
   document.querySelectorAll('.bubble').forEach(el => {
     const id = Number(el.dataset.id);
     const sender = el.dataset.sender;
@@ -343,9 +368,8 @@ socket.on('msg', (m) => {
   if (isNearBottom(log) && nameSel.value) socket.emit('read_upto', lastId);
 });
 
-/* ===== 送信 ===== */
+/* ===== 送信（Enter送信 / Shift+Enter改行） ===== */
 function joinIfNeeded(){ if (nameSel.value) socket.emit('join', nameSel.value); }
-
 sendB.onclick = () => {
   if (!nameSel.value) return alert('メンバーを選択してください');
   joinIfNeeded();
@@ -354,13 +378,18 @@ sendB.onclick = () => {
   const auto = isNearBottom(log);
   socket.emit('msg', t);
   textI.value = '';
+  autoResize();
   if (auto) scrollToBottom(log);
 };
-
-textI.addEventListener('keydown', e => {
-  if(e.key==='Enter'){
-    if (mentionBox.style.display === 'block') { e.preventDefault(); applyActiveMention(); return; }
-    sendB.click();
+textI.addEventListener('keydown', (e) => {
+  if (e.key === 'Enter' && !e.shiftKey) {
+    e.preventDefault();
+    // メンション候補が出ていれば補完、無ければ送信
+    if (mentionBox.style.display === 'block') {
+      applyActiveMention();
+    } else {
+      sendB.click();
+    }
   } else if (e.key === 'Tab' && mentionBox.style.display === 'block') {
     e.preventDefault(); applyActiveMention();
   } else if (e.key === 'ArrowDown' && mentionBox.style.display === 'block') {
@@ -369,9 +398,6 @@ textI.addEventListener('keydown', e => {
     e.preventDefault(); moveActiveMention(-1);
   }
 });
-
-// 入力欄フォーカス時も最下部へ（スマホで隠れにくく）
-textI.addEventListener('focus', () => setTimeout(() => scrollToBottom(log), 60));
 
 /* ===== 画像送信 ===== */
 photoB.onclick = () => photoI.click();
@@ -382,7 +408,7 @@ photoI.onchange = async () => {
   if (f.size > 700*1024) { alert('画像は約700KBまでです'); photoI.value=''; return; }
   const reader = new FileReader();
   reader.onload = () => {
-    const dataURL = reader.result; // data:image/...;base64,...
+    const dataURL = reader.result;
     socket.emit('upload_image', { dataURL });
     photoI.value = '';
   };
@@ -390,7 +416,7 @@ photoI.onchange = async () => {
   reader.readAsDataURL(f);
 };
 
-/* ===== 既読：画面が最下部なら最新IDで read_upto 送信 ===== */
+/* ===== 既読：最下部にいる時に更新 ===== */
 const throttle = (fn, ms=400) => { let t=0; return (...a)=>{const n=Date.now(); if(n-t>ms){t=n; fn(...a);} }; };
 const trySendRead = throttle(() => {
   if (!nameSel.value) return;
@@ -451,7 +477,7 @@ function applyMention(name){
   textI.value = before + '@' + name + ' ' + after;
   const newPos = (before + '@' + name + ' ').length;
   textI.setSelectionRange(newPos, newPos);
-  hideMentionBox(); textI.focus();
+  hideMentionBox(); textI.focus(); autoResize();
 }
 function moveActiveMention(step){
   const buttons = [...mentionList.querySelectorAll('.mention-item')];
